--- a/pom.xml
+++ b/pom.xml
@@ -25,12 +25,12 @@
         <maven.compiler.target>15</maven.compiler.target>
     </properties>
     <dependencies>
-        <dependency>
-           <groupId>org.testng</groupId>
-           <artifactId>testng</artifactId>
-           <version>7.4.0</version>
-           <scope>test</scope>
-        </dependency>
+<!--        <dependency>-->
+<!--           <groupId>org.testng</groupId>-->
+<!--           <artifactId>testng</artifactId>-->
+<!--           <version>7.4.0</version>-->
+<!--           <scope>test</scope>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
@@ -89,6 +89,13 @@
             <artifactId>spring-web</artifactId>
             <version>5.3.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <version>2.4.5</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
